--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 В папке src/ все необходимые исходники, их нужно собрать вместе с остальными исходниками проекта
-Взаимодействие с датчиком происходит через объект DistSensor_t. Описание в файле dist_sensor_shield.h
+Взаимодействие с датчиком происходит через объект DistSensor_t. Описание API в файле dist_sensor_shield.h
 Пример обмена в файле main.c
 
 Сборка и запуск примера:
