--- a/README
+++ b/README
@@ -2,7 +2,9 @@
 Взаимодействие с датчиком происходит через объект DistSensor_t. Описание API в файле dist_sensor_shield.h
 Пример обмена в файле main.c
 
+Для опроса датчика нужны root права, для работы в режиме эмулятора - нет.
+
 Сборка и запуск примера:
 cmake .
 make
-./run
+sudo ./run
